# NightmarePlugin

./: .gitignore  CMakeLists.txt  NightmarePlugin.sln  makeCMakeLists.py
src/: CelesteMoveset.cpp  Cheats.cpp  Cheats.hpp  Command.cpp  Interface.cpp  NightmarePlugin.cpp  NightmarePlugin.hpp  Offsets.hpp  Plugin.hpp  Utils.hpp  Variable.cpp  plugin.vcxproj  plugin.vcxproj.filters
src/Hud/: Hud.cpp  Hud.hpp
src/Modules/: Client.cpp  Client.hpp  Console.cpp  Console.hpp  Engine.cpp  Engine.hpp  Module.cpp  Module.hpp  Server.cpp  Server.hpp  Surface.cpp  Surface.hpp  Tier1.cpp  Tier1.hpp  VGui.cpp  VGui.hpp  VScript.cpp  VScript.hpp
src/Utils/: KeyValues.hpp  Math.hpp  Memory.cpp  Memory.hpp  Platform.hpp  SDK.hpp
